<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".SplashActivity">

    <ImageView
        style="@style/SplashImageView"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:contentDescription="@string/splash_ifood" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/SplashTextFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_made_by" />

        <TextView
            style="@style/SplashTextFooterBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_alan_minusculi" />
    </LinearLayout>
</RelativeLayout>