<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_bg">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/at"
                        android:textColor="@color/colorDarkTextColor"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/txtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/username_fragment_username_hint"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:text="@={viewModel.username}"
                        android:textColor="@color/colorDarkTextColor"
                        android:textSize="20sp" />
                </LinearLayout>

                <ListView
                    android:id="@+id/listUser"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" />
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:contentDescription="@string/username_fragment_next"
                android:src="@drawable/ic_next"
                app:fabSize="normal" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </RelativeLayout>

    <data>

        <variable
            name="viewModel"
            type="br.com.minusculi.ifoodmobiletest.ui.main.viewmodels.ViewModel" />
    </data>
</layout>
